# CUDA-Vector-Sum

./: CMakeLists.txt  README.md  compile_and_run.sh  main.cu  vecAdd.cu  vecAdd.h
